Cleanup: use partials in templates

--- a/views/failure.handlebars
+++ b/views/failure.handlebars
@@ -1,8 +1,2 @@
 <h1> Failure </h1>
-<ul>
-<li>Payment method ID: {{payment_method_id}}</li>
-<li>External reference: {{external_reference}}</li>
-<li>Payment ID: {{payment_id}}</li>
-<li>Collection ID: {{collection_id}}</li>
-<li>Preference ID: {{preference_id}}</li>
-</ul>
+{{> back_data }}
